fixed height issue on mobiles

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,11 +4,6 @@ body * {
   transition: background-color 0.6s ease;
 }
 
-.mh-100vh {
-  min-height: 100vh;
-  max-height: 100% !important;
-}
-
 div.notInPuzzle,
 div.inPuzzle,
 div.inPlace {
